--- a/core_template/master_base.html
+++ b/core_template/master_base.html
@@ -1,4 +1,5 @@
-
+{% load render_bundle from webpack_loader %}
+{% load webpack_static from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,16 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Django FIDO2</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
-    <style>
-        body {
-            margin: 0px;
-            
-        }
-    </style>
+    <link rel="stylesheet" href={% webpack_static 'dist/main.css' %}>
 </head>
 <body>
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    {% render_bundle 'main' 'js' %}
     <!-- This is where core UI components go -->
     <header class="mdc-top-app-bar">
         <div class="mdc-top-app-bar__row">
